INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR})

SET(Boost_USE_STATIC_LIBS OFF)
SET(Boost_USE_MULTITHREAD ON)
FIND_PACKAGE(Boost 1.50.0 REQUIRED COMPONENTS system)
IF(Boost_FOUND)
  INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIRS})
  LINK_DIRECTORIES(${Boost_LIBRARY_DIRS})
ENDIF(Boost_FOUND)

SET(USED_LIBS ${Boost_SYSTEM_LIBRARY})

ADD_EXECUTABLE(client client.cpp)

FIND_PACKAGE(Threads)
IF(Threads_FOUND)
  target_link_libraries(client Threads::Threads)
ENDIF(Threads_FOUND)